src_old/objects/AISettings__mdt.object
<CustomObject>
    <fields>
        <fullName>BatchSize__c</fullName>
        <description>The number of photos to process per auth token</description>
        <inlineHelpText>The number of photos to process per auth token</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EinsteinPem__c</fullName>
        <description>private key</description>
        <inlineHelpText>private key</inlineHelpText>
        <label>EinsteinPem</label>
        <length>8019</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhotoModelName__c</fullName>
        <description>Photo Model Name</description>
        <label>Image Classifier Model Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUrl__c</fullName>
        <description>AI service entry URL</description>
        <label>Service Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TokenUrl__c</fullName>
        <description>An entry point url to the access token</description>
        <label>Token Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TokenValidForInMinutes__c</fullName>
        <description>oauth token valid duration in minutes</description>
        <label>Token Valid Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AI Setting</label>
    <pluralLabel>AI Settings</pluralLabel>
</CustomObject>